--- a/frontend/student-dashboard.html
+++ b/frontend/student-dashboard.html
@@ -95,25 +95,28 @@
         </div>
     </div>
 
-    <!-- Firebase SDK v11 (Modular) -->
     <script type="module">
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js';
-        import { getAuth, signOut, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/11.0.0/firebase-auth.js';
-        import { getFirestore, collection, query, where, getDocs, orderBy } from 'https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js';
+ // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyAnz7rG5VmOo-4xCixTTFETGjHStEzptqA",
-            authDomain: "techsprint-smartboard-d0a55.firebaseapp.com",
-            databaseURL: "https://techsprint-smartboard-d0a55-default-rtdb.firebaseio.com",
-            projectId: "techsprint-smartboard-d0a55",
-            storageBucket: "techsprint-smartboard-d0a55.firebasestorage.app",
-            messagingSenderId: "437326267964",
-            appId: "1:437326267964:web:c70536d8ec8d3abecae539",
-            measurementId: "G-MEPRGVM17Q"
-        };
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBwD_J2y1Nf1C5uQrfo5T-KMIWy-PSI3Q0",
+  authDomain: "quantumboard9.firebaseapp.com",
+  projectId: "quantumboard9",
+  storageBucket: "quantumboard9.firebasestorage.app",
+  messagingSenderId: "727280019376",
+  appId: "1:727280019376:web:c16d18b68a7a1aebbe1875",
+  measurementId: "G-SM8BSDK9EV"
+};
 
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
         const db = getFirestore(app);
 
         window.auth = auth;
