--- a/frontend/student-dashboard.html
+++ b/frontend/student-dashboard.html
@@ -105,7 +105,7 @@ import { getAnalytics } from "firebase/analytics";
 // Your web app's Firebase configuration
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "AIzaSyBwD_J2y1Nf1C5uQrfo5T-KMIWy-PSI3Q0",
+  apiKey: "AIxxxxxxxxxxxxxxxxxxx",
   authDomain: "quantumboard9.firebaseapp.com",
   projectId: "quantumboard9",
   storageBucket: "quantumboard9.firebasestorage.app",
